update theme usage as a module

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,7 @@
 baseURL = "https://devopskc.com/"
 # Title of your website (required).
 title = "The DevOps KC Community"
-theme = "hugoplate"
+#theme = "hugoplate" since using a module
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
 timeZone = "America/Chicago"
 # post pagination
