--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "https://devopskc.com/"
+baseURL = "https://devopskc-community.netlify.app/"
 # Title of your website (required).
 title = "The DevOps KC Community"
 #theme = "hugoplate" since using a module
