--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "https://example.org"
+baseURL = "https://devopskc-community.netlify.app/"
 title = "The DevOps KC Community"
 theme = "hugoplate"
 timeZone = "America/Chicago"
